# local-FT-with-llama-cpp

./: .gitignore  Readme.md
demo/: CMakeCache.txt  CMakeLists.txt  GPT2_TRAINING_GUIDE.md  Makefile  README.md  TRAINING_SUMMARY.md  cmake_install.cmake  enhanced-mlp-with-src.cpp  enhanced-mlp.cpp  ggml-multilayer-logistic.cpp  ggml-multilayer.cpp  ggml-perceptron.cpp  gpt2-train.cpp  gpu-neural-demo.cpp  multilayer-perceptron.cpp  simple-gpt2-train.cpp  simple-mlp.cpp  train-text-generation.cpp
demo/ggml/: ggml-config.cmake  ggml-version.cmake
demo/gpt_2/: ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  README.md  attention.cpp  attention.h  build.sh  config.h  data_loader.cpp  data_loader.h  embeddings.cpp  embeddings.h  feedforward.cpp  feedforward.h  layer_norm.cpp  layer_norm.h  main.cpp  model.cpp  model.h  trainer.cpp  trainer.h  training_data.txt  transformer_block.cpp  transformer_block.h  vocab.txt
examples/: CMakeLists.txt
examples/logistic_regression/: CMakeLists.txt  README.md  logistic-regression.cpp
examples/simple/: simple.cpp
src/: autograd_tensor.cpp  autograd_tensor.h  llama-backward.cpp  llama-backward.h  llama-dataset.cpp  llama-dataset.h  llama-forward.cpp  llama-forward.h  llama-loss.cpp  llama-loss.h  llama-optimizer.cpp  llama-optimizer.h  llama-trainer.cpp  llama-trainer.h  simple-neural-model.cpp  simple-neural-model.h
